Account for scale and current context position (as well as page position) in the device context world transform passed to plugins.  This is especially important for print surface DPI. http://bugs.webkit.org/show_bug.cgi?id=32909.

Reviewed by Jon Honeycutt.

* plugins/win/PluginViewWin.cpp:
(WebCore::PluginView::paintWindowedPluginIntoContext): Revise
  world context handling to include scaling and translation
  already set for the CTM.



Canonical link: https://commits.webkit.org/44367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52955 268f45cc-cd09-0410-ab3c-d52691b4dbfc